--- a/public/landing-recordari.html
+++ b/public/landing-recordari.html
@@ -12,7 +12,8 @@
     <title>Recordari</title>
 </head>
 <body class="bg-fixed overflow-auto"  style="background-image: url('../public/image/fondo.png')">
-    <!--inicio de Carrucel-->
+    <img src="../public/image/loogo.jpg" alt="">
+    <!--inicio de Carrucel 111-->
     <div class="max-w-2xl mx-auto">
 
       <div id="default-carousel" class="relative" data-carousel="static">
